--- a/xinx/ui/projectproperty.ui
+++ b/xinx/ui/projectproperty.ui
@@ -19,14 +19,6 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="tabProjectDefinition" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>591</width>
-        <height>320</height>
-       </rect>
-      </property>
       <attribute name="title" >
        <string>&amp;Project Definition</string>
       </attribute>
@@ -152,14 +144,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tabDefaultValue" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>591</width>
-        <height>320</height>
-       </rect>
-      </property>
       <attribute name="title" >
        <string>&amp;Default value</string>
       </attribute>
@@ -341,14 +325,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="tabCustomFiles" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>591</width>
-        <height>320</height>
-       </rect>
-      </property>
       <attribute name="title" >
        <string>&amp;Custom files</string>
       </attribute>
@@ -413,6 +389,37 @@
              <string>The sub-directory where the derivated file must be stored.</string>
             </property>
            </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab" >
+      <attribute name="title" >
+       <string>&amp;Preloaded files</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout" >
+       <item>
+        <widget class="QGroupBox" name="groupBox_2" >
+         <property name="title" >
+          <string>&amp;Preloaded files at project loading</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout" >
+          <item row="0" column="0" >
+           <widget class="XinxListWidgetImpl" native="1" name="m_preloadedProjectFiles" />
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_4" >
+         <property name="title" >
+          <string>Actually preloaded files</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_2" >
+          <item row="0" column="0" >
+           <widget class="QListWidget" name="m_preloadedFiles" />
           </item>
          </layout>
         </widget>
