--- a/components/ui/xinxlistwidget.ui
+++ b/components/ui/xinxlistwidget.ui
@@ -13,16 +13,7 @@
    <string/>
   </property>
   <layout class="QHBoxLayout" >
-   <property name="leftMargin" >
-    <number>0</number>
-   </property>
-   <property name="topMargin" >
-    <number>0</number>
-   </property>
-   <property name="rightMargin" >
-    <number>0</number>
-   </property>
-   <property name="bottomMargin" >
+   <property name="margin" >
     <number>0</number>
    </property>
    <item>
@@ -33,16 +24,7 @@
      <property name="spacing" >
       <number>6</number>
      </property>
-     <property name="leftMargin" >
-      <number>0</number>
-     </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
+     <property name="margin" >
       <number>0</number>
      </property>
      <item>
@@ -57,7 +39,8 @@
         <string>Add</string>
        </property>
        <property name="icon" >
-        <iconset resource="../application.qrc" >:/images/add.png</iconset>
+        <iconset resource="../xinxpluginselector.qrc" >
+         <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
        </property>
       </widget>
      </item>
@@ -67,7 +50,8 @@
         <string>Delete</string>
        </property>
        <property name="icon" >
-        <iconset resource="../application.qrc" >:/images/remove.png</iconset>
+        <iconset resource="../xinxpluginselector.qrc" >
+         <normaloff>:/images/remove.png</normaloff>:/images/remove.png</iconset>
        </property>
       </widget>
      </item>
@@ -77,7 +61,8 @@
         <string>Default</string>
        </property>
        <property name="icon" >
-        <iconset resource="../application.qrc" >:/images/checkbox.png</iconset>
+        <iconset resource="../xinxpluginselector.qrc" >
+         <normaloff>:/images/checkbox.png</normaloff>:/images/checkbox.png</iconset>
        </property>
       </widget>
      </item>
@@ -86,13 +71,35 @@
        <property name="orientation" >
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>20</width>
          <height>40</height>
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QToolButton" name="m_btnUp" >
+       <property name="text" >
+        <string>Up</string>
+       </property>
+       <property name="icon" >
+        <iconset resource="../xinxpluginselector.qrc" >
+         <normaloff>:/images/up.png</normaloff>:/images/up.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="m_btnDown" >
+       <property name="text" >
+        <string>Down</string>
+       </property>
+       <property name="icon" >
+        <iconset resource="../xinxpluginselector.qrc" >
+         <normaloff>:/images/down.png</normaloff>:/images/down.png</iconset>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -105,7 +112,7 @@
   <tabstop>m_btnDef</tabstop>
  </tabstops>
  <resources>
-  <include location="../application.qrc" />
+  <include location="../xinxpluginselector.qrc" />
  </resources>
  <connections/>
 </ui>
