--- a/xinx/ui/xquery.ui
+++ b/xinx/ui/xquery.ui
@@ -89,7 +89,7 @@
        </widget>
       </item>
       <item row="2" column="1" >
-       <widget class="XinxCodeEdit" native="1" name="m_queryTextEdit" />
+       <widget class="XinxCodeEditAction" native="1" name="m_queryTextEdit" />
       </item>
      </layout>
     </widget>
@@ -101,7 +101,7 @@
      </property>
      <layout class="QGridLayout" name="gridLayout" >
       <item row="1" column="0" >
-       <widget class="XinxCodeEdit" native="1" name="m_resultTextEdit" >
+       <widget class="XinxCodeEditAction" native="1" name="m_resultTextEdit" >
         <property name="readOnly" stdset="0" >
          <bool>true</bool>
         </property>
@@ -131,7 +131,7 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>XinxCodeEdit</class>
+   <class>XinxCodeEditAction</class>
    <extends>QWidget</extends>
    <header location="global" >editors/xinxcodeedit.h</header>
    <container>1</container>
