--- a/plugins/webplugin/ui/webpluginform.ui
+++ b/plugins/webplugin/ui/webpluginform.ui
@@ -99,46 +99,7 @@
             </item>
            </widget>
           </item>
-          <item row="1" column="0" colspan="2">
-           <widget class="QStackedWidget" name="viewerOptionsWidget">
-            <property name="currentIndex">
-             <number>0</number>
-            </property>
-            <widget class="QWidget" name="pageInternalViewer"/>
-            <widget class="QWidget" name="pageExternalViewer">
-             <layout class="QFormLayout" name="formLayout_6">
-              <property name="margin">
-               <number>0</number>
-              </property>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_8">
-                <property name="text">
-                 <string>&amp;Path to brownser :</string>
-                </property>
-                <property name="buddy">
-                 <cstring>m_viewerEdit</cstring>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="DirectoryEditWidget" name="m_viewerEdit" native="true">
-                <property name="focusPolicy">
-                 <enum>Qt::TabFocus</enum>
-                </property>
-                <property name="whatsThis">
-                 <string>&lt;p&gt;This is the path where &lt;b&gt;XINX&lt;/b&gt; data files are stored (as snipet or completion file). &lt;/p&gt;
-&lt;p&gt;Normally the directory is stored in the xml sub-directory of &lt;b&gt;XINX&lt;/b&gt;&lt;/p&gt;</string>
-                </property>
-                <property name="directory" stdset="0">
-                 <bool>false</bool>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </widget>
-           </widget>
-          </item>
-          <item row="2" column="0">
+          <item row="1" column="0">
            <widget class="QLabel" name="label">
             <property name="text">
              <string>&amp;Parser :</string>
@@ -148,7 +109,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item row="1" column="1">
            <widget class="QComboBox" name="m_parserComboBox">
             <item>
              <property name="text">
@@ -167,7 +128,7 @@
             </item>
            </widget>
           </item>
-          <item row="4" column="0" colspan="2">
+          <item row="3" column="0" colspan="2">
            <widget class="QStackedWidget" name="parserOptionsWidget">
             <property name="currentIndex">
              <number>0</number>
@@ -181,63 +142,13 @@
                <number>0</number>
               </property>
               <item row="0" column="0">
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>&amp;Java Path :</string>
-                </property>
-                <property name="buddy">
-                 <cstring>m_javaPathEdit</cstring>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="DirectoryEditWidget" name="m_javaPathEdit" native="true">
-                <property name="focusPolicy">
-                 <enum>Qt::TabFocus</enum>
-                </property>
-                <property name="whatsThis">
-                 <string>&lt;p&gt;This is the path where &lt;b&gt;XINX&lt;/b&gt; data files are stored (as snipet or completion file). &lt;/p&gt;
-&lt;p&gt;Normally the directory is stored in the xml sub-directory of &lt;b&gt;XINX&lt;/b&gt;&lt;/p&gt;</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="0">
                <widget class="QLabel" name="label_9">
                 <property name="text">
                  <string>JAR Name :</string>
                 </property>
-                <property name="buddy">
-                 <cstring>m_javaPathEdit</cstring>
-                </property>
                </widget>
               </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="label_4">
-                <property name="text">
-                 <string>&amp;Class name :</string>
-                </property>
-                <property name="buddy">
-                 <cstring>m_classNameEdit</cstring>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QLineEdit" name="m_classNameEdit"/>
-              </item>
-              <item row="3" column="0">
-               <widget class="QLabel" name="label_5">
-                <property name="text">
-                 <string>&amp;Parameter :</string>
-                </property>
-                <property name="buddy">
-                 <cstring>m_parameterEdit</cstring>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="1">
-               <widget class="QLineEdit" name="m_parameterEdit"/>
-              </item>
-              <item row="1" column="1">
+              <item row="0" column="1">
                <widget class="DirectoryEditWidget" name="m_classPathEdit" native="true">
                 <property name="focusPolicy">
                  <enum>Qt::TabFocus</enum>
@@ -251,37 +162,42 @@
                 </property>
                </widget>
               </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label_4">
+                <property name="text">
+                 <string>&amp;Class name :</string>
+                </property>
+                <property name="buddy">
+                 <cstring>m_classNameEdit</cstring>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLineEdit" name="m_classNameEdit"/>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_5">
+                <property name="text">
+                 <string>&amp;Parameter :</string>
+                </property>
+                <property name="buddy">
+                 <cstring>m_parameterEdit</cstring>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="m_parameterEdit"/>
+              </item>
              </layout>
             </widget>
             <widget class="QWidget" name="pageXsltprocParser">
              <layout class="QFormLayout" name="formLayout_5">
+              <property name="fieldGrowthPolicy">
+               <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+              </property>
               <property name="margin">
                <number>0</number>
               </property>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_6">
-                <property name="text">
-                 <string>&amp;Path to XSLT Proc :</string>
-                </property>
-                <property name="buddy">
-                 <cstring>m_xsltprocPathEdit</cstring>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="DirectoryEditWidget" name="m_xsltprocPathEdit" native="true">
-                <property name="focusPolicy">
-                 <enum>Qt::TabFocus</enum>
-                </property>
-                <property name="whatsThis">
-                 <string>&lt;p&gt;This is the path where &lt;b&gt;XINX&lt;/b&gt; data files are stored (as snipet or completion file). &lt;/p&gt;
-&lt;p&gt;Normally the directory is stored in the xml sub-directory of &lt;b&gt;XINX&lt;/b&gt;&lt;/p&gt;</string>
-                </property>
-                <property name="directory" stdset="0">
-                 <bool>false</bool>
-                </property>
-               </widget>
-              </item>
              </layout>
             </widget>
             <widget class="QWidget" name="pageInternalParser">
@@ -368,22 +284,6 @@ p, li { white-space: pre-wrap; }
     <hint type="destinationlabel">
      <x>129</x>
      <y>327</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>m_viewerComboBox</sender>
-   <signal>currentIndexChanged(int)</signal>
-   <receiver>viewerOptionsWidget</receiver>
-   <slot>setCurrentIndex(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>218</x>
-     <y>249</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>220</x>
-     <y>269</y>
     </hint>
    </hints>
   </connection>
