Prepare the new branche

--- a/xinx/ui/about.ui
+++ b/xinx/ui/about.ui
@@ -28,7 +28,7 @@
    <item row="0" column="1" >
     <widget class="QLabel" name="m_labelVersion" >
      <property name="text" >
-      <string>&lt;b>XINX trunk-svn (use Qt %1)&lt;/b></string>
+      <string>&lt;b>XINX v0.8.1.0 (use Qt %1)&lt;/b></string>
      </property>
     </widget>
    </item>
