--- a/plugins/services/ui/servicesprojectproperty.ui
+++ b/plugins/services/ui/servicesprojectproperty.ui
@@ -50,7 +50,7 @@
           <property name="sizeHint" stdset="0">
            <size>
             <width>40</width>
-            <height>20</height>
+            <height>17</height>
            </size>
           </property>
          </spacer>
@@ -85,7 +85,11 @@
        </layout>
       </item>
       <item>
-       <widget class="QPlainTextEdit" name="m_wsdlEdit"/>
+       <widget class="QPlainTextEdit" name="m_wsdlEdit">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -95,12 +99,16 @@
            <string>&amp;WebServices Adresse :</string>
           </property>
           <property name="buddy">
-           <cstring>lineEdit</cstring>
+           <cstring>m_adressLineEdit</cstring>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="m_adressLineEdit">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
