--- a/plugins/services/ui/servicesprojectproperty.ui
+++ b/plugins/services/ui/servicesprojectproperty.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ServicesProjectProperty</class>
- <widget class="QWidget" name="ServicesProjectProperty" >
-  <property name="geometry" >
+ <widget class="QWidget" name="ServicesProjectProperty">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,28 +10,107 @@
     <height>327</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>WebServices</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" >
-   <item row="0" column="0" >
-    <widget class="QGroupBox" name="m_webServiceGroupBox" >
-     <property name="whatsThis" >
-      <string>&lt;p>Check this box is you want add service web to the project. The list is a list of WSDL. When you start the project, &lt;b>XINX&lt;/b> will connect to the service and download the description file.&lt;/p>
-&lt;p>Next you can execute a service stream that open a dialog with the in stream and the out stream.&lt;/p></string>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QGroupBox" name="m_webServiceGroupBox">
+     <property name="whatsThis">
+      <string>&lt;p&gt;Check this box is you want add service web to the project. The list is a list of WSDL. When you start the project, &lt;b&gt;XINX&lt;/b&gt; will connect to the service and download the description file.&lt;/p&gt;
+&lt;p&gt;Next you can execute a service stream that open a dialog with the in stream and the out stream.&lt;/p&gt;</string>
      </property>
-     <property name="title" >
+     <property name="title">
       <string>Project has WebServices</string>
      </property>
-     <property name="checkable" >
+     <property name="checkable">
       <bool>true</bool>
      </property>
-     <property name="checked" >
+     <property name="checked">
       <bool>false</bool>
      </property>
-     <layout class="QGridLayout" >
-      <item row="0" column="0" >
-       <widget class="XinxListWidgetImpl" native="1" name="m_servicesList" />
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="XinxListWidgetImpl" name="m_servicesList" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>50</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>17</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QToolButton" name="m_refreshWSDL">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Refresh</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../../xinx/application.qrc">
+            <normaloff>:/images/1downarrow.png</normaloff>:/images/1downarrow.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QPlainTextEdit" name="m_wsdlEdit">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>&amp;WebServices Adresse :</string>
+          </property>
+          <property name="buddy">
+           <cstring>m_adressLineEdit</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="m_adressLineEdit">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
@@ -43,8 +123,16 @@
    <extends>QWidget</extends>
    <header>xinxlistwidgetimpl.h</header>
    <container>1</container>
+   <slots>
+    <signal>currentRowChanged(int)</signal>
+   </slots>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../../xinx/application.qrc"/>
+ </resources>
  <connections/>
+ <slots>
+  <slot>wsdlSelectionChanged()</slot>
+ </slots>
 </ui>
