--- a/libxinx/snipets/callsnipetdlg.ui
+++ b/libxinx/snipets/callsnipetdlg.ui
@@ -21,7 +21,7 @@
     <number>9</number>
    </property>
    <item>
-    <widget class="QTabWidget" name="m_resultTabWidget">
+    <widget class="QTabWidget" name="m_tabWidget">
      <property name="currentIndex">
       <number>0</number>
      </property>
@@ -63,6 +63,12 @@ p, li { white-space: pre-wrap; }
            <widget class="QTableWidget" name="m_paramTableWidget">
             <attribute name="horizontalHeaderMinimumSectionSize">
              <number>1</number>
+            </attribute>
+            <attribute name="horizontalHeaderStretchLastSection">
+             <bool>true</bool>
+            </attribute>
+            <attribute name="horizontalHeaderStretchLastSection">
+             <bool>true</bool>
             </attribute>
             <column>
              <property name="text">
@@ -164,5 +170,38 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
+   <receiver>CallSnipetDialog</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>279</x>
+     <y>329</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>259</x>
+     <y>352</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>CallSnipetDialog</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>322</x>
+     <y>333</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>338</x>
+     <y>353</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
